--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-tabs": "^3.2.3",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.0",
     "styled-components": "^5.3.3",
+    "swiper": "^7.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -51,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-hooks-use-modal": "^2.1.0"
   }
 }
